<resources>
    <string name="app_name">Listening</string>
    <string name="home_tab">首页</string>
    <string name="activity_tab">活动</string>
    <string name="contact_tab">交流</string>
    <string name="me_tab">我的</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="circle_talk">探讨</string>
    <string name="circle_private_letter">私信</string>
    <string name="circle_only_lookat_him">只看TA</string>
    <string name="activity_every_ask">每日问答</string>
    <string name="activity_every_ask_desc">在孩子的成长路上，家长和孩子怎样沟通才会更好的帮助孩子全面发展</string>
    <string name="activity_offline">线下活动</string>
    <string name="famous_lesson">名人讲座</string>
    <string name="contact_seek">找人</string>
    <string name="contact_private">私信</string>
    <string name="contact_communty">社区</string>
    <string name="contact_friend_request">朋友请求</string>
    <string name="contact_add_friend">添加朋友</string>
    <string name="contact_maybe_know">可能认识</string>
    <string name="contact_nearby">附近的人</string>
    <string name="text_user_login_title">聆心</string>
    <string name="text_user_name">账户</string>
    <string name="text_user_hint">手机号</string>
    <string name="text_get_code">获取验证码</string>
    <string name="text_tip_phone">请输入手机号码</string>
    <string name="text_check_code">请输入验证码</string>
    <string name="text_input_password">密码</string>
    <string name="text_user_login">登录</string>
    <string name="text_user_regiter">注册</string>
    <string name="text_user_done">完成</string>
    <string name="text_user_free_resiger">免费注册</string>
    <string name="text_user_forget_pwd">忘记密码</string>
    <string name="text_user_other_login">微信登录</string>
    <string name="text_user_login_desc">聆心，一款随时聆听孩子想法的产品</string>
    <string name="home_desc">链接家长与老师的教育社区</string>
    <string name="home_how_to_stydy">如何让孩子在娱乐中学习</string>
    <string name="home_desc_test">如果你还无法简洁的表达你的想法，那么只能说明你还不够了解它</string>
    <string name="reg_type_teacher">老师</string>
    <string name="reg_type_parent">家长</string>
    <string name="reg_skip">跳过</string>
    <string name="reg_circle_name">圈子名称</string>
    <string name="reg_circle_school">学校名称</string>
    <string name="reg_input_nickname">请输入昵称</string>
    <string name="reg_input_pwd">请输入密码</string>
    <string name="reg_next_step">下一步</string>
    <string name="reg_choose_role">选择角色</string>
    <string name="phone_can_not_be_empty">电话号码不能为空</string>
    <string name="phone_num_is_error">请输入正确的手机号</string>
    <string name="code_can_not_be_empty">验证码不能为空</string>
    <string name="account_can_not_be_empty">账号不能为空</string>
    <string name="password_can_not_be_empty">密码不能为空</string>
    <string name="fail_to_login">登录失败</string>
    <string name="password_is_error">密码错误</string>
    <string name="no_user">账号不存在</string>
    <string name="is_logining">正在登录</string>
    <string name="success_to_login">登录成功</string>
    <string name="fail_to_register">注册失败</string>
    <string name="success_to_register">注册成功</string>
    <string name="publish_msg_title_text">消息</string>
    <string name="success_to_publish">发布成功</string>
    <string name="send_msg">发送</string>
    <string name="fail_to_publish">发布失败</string>
    <string name="msg_can_not_be_empty">发布的消息不能为空</string>
    <string name="publis_msg_hint">写下你观点或看法吧</string>

</resources>
