<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    >
<!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="12356"
        android:textSize="11sp"
        android:textColor="#ffffff"
        android:background="@drawable/red_hint"
        android:id="@+id/textView"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:background="@drawable/red_hint"
        android:textSize="6dp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        />
       -->

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
    </LinearLayout>

    <!-- 底部菜单栏 -->
    <com.zhoushuai.bottombar.BottomTabGroup
        android:id="@+id/bottom_bar_root"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:background="@drawable/list_vertical_root_bg"
        android:paddingTop="5dp"
        >

        <com.zhoushuai.listening.BottomView
            android:id="@+id/tab_home"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/home_tab"
            android:textColor="@color/main_bottombar_text_selector"
            android:drawableTop="@drawable/main_bottombar_icon_home_selector"/>
        <com.zhoushuai.listening.BottomView
            android:id="@+id/tab_activity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/activity_tab"
            android:textColor="@color/main_bottombar_text_selector"
            android:drawableTop="@drawable/main_bottombar_icon_activity_selector"/>

        <com.zhoushuai.listening.BottomView
            android:id="@+id/tab_add"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/home_add"/>

        <com.zhoushuai.listening.BottomView
            android:id="@+id/tab_contact"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/contact_tab"
            android:textColor="@color/main_bottombar_text_selector"
            android:drawableTop="@drawable/main_bottombar_icon_contact_selector"/>

        <com.zhoushuai.listening.BottomView
            android:id="@+id/tab_me"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/me_tab"
            android:textColor="@color/main_bottombar_text_selector"
            android:drawableTop="@drawable/main_bottombar_icon_me_selector"/>

    </com.zhoushuai.bottombar.BottomTabGroup>


</RelativeLayout>
